crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__append_empty_search.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foo
<!-- REPLACEMENTS -->
<!-- SEARCH -->
<!-- REPLACE --> bar
<!-- FINAL -->foo bar
