crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__delete_empty_replace.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foo bar baz
<!-- REPLACEMENTS -->
<!-- SEARCH -->bar 
<!-- REPLACE -->
<!-- FINAL -->foo baz
