crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__delete_single_line_only.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->line1
line2
line1
line3
<!-- REPLACEMENTS -->
<!-- SEARCH -->line1

<!-- REPLACE -->
<!-- FINAL -->line2
line1
line3
