crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__different_replacements_in_sequence.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foo bar
<!-- REPLACEMENTS -->
<!-- SEARCH -->foo
<!-- REPLACE -->baz
<!-- SEARCH -->bar
<!-- REPLACE -->qux
<!-- FINAL -->baz qux
