crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__exact_threshold_match.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foox
<!-- REPLACEMENTS -->
<!-- SEARCH -->foo
<!-- REPLACE -->bar
<!-- FINAL -->barx
