crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__fuzzy_match_hyphenated_pattern.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->abc foobar pqr
<!-- REPLACEMENTS -->
<!-- SEARCH -->foo-bar
<!-- REPLACE -->replaced
<!-- FINAL -->abc replaced pqr
