crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__fuzzy_match_with_extra_characters.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->fooo bar
<!-- REPLACEMENTS -->
<!-- SEARCH -->foo
<!-- REPLACE -->baz
<!-- FINAL -->bazo bar
