crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__fuzzy_match_with_prefix.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foox baz foo
<!-- REPLACEMENTS -->
<!-- SEARCH -->afoo
<!-- REPLACE -->bar
<!-- FINAL -->foox baz bar
