crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__mixed_unicode_ascii.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->Hello 世界 World
<!-- REPLACEMENTS -->
<!-- SEARCH -->世界 World
<!-- REPLACE -->地球
<!-- FINAL -->Hello 地球
